--- a/oncoFinder2/templates/report/gsk_prj4.html
+++ b/oncoFinder2/templates/report/gsk_prj4.html
@@ -61,7 +61,7 @@
             <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#ds_analysis">Drug Scoring</a></li>
             {%endif%}
             {%if 'l1k' in report.slug %}
-            <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#dl_analysis">Deep Learning</a></li>
+            <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#dl_analysis">Drug Repurposing</a></li>
             {%endif%}
             <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#biomap">BioMAP inference</a></li>
             <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#hit">Hit qualification</a></li>  
@@ -460,7 +460,7 @@
 
 {%if 'gsk_prj4_t1' in report.slug %}
  <hr/> 
-<h2 id='dl_analysis'>Deep Learning</h2>
+<h2 id='dl_analysis'>Drug Repurposing</h2>
 
 <hr/>
 <center>
