add Tox groups snalisys for gsk_prj4_X reports 1

--- a/oncoFinder2/templates/report/gsk_prj4.html
+++ b/oncoFinder2/templates/report/gsk_prj4.html
@@ -1669,7 +1669,7 @@ $(function() {
 <center>
 <img src='/media/report-portal/gsk_prj4_t5/img_tox.png' />
 <p>
-&nbsp;
+Differentially expressed genes distribution across 5 distinct Tox groups
 </p>
 <hr style='width:50%' />
 
