--- a/oncoFinder2/templates/report/gsk_prj4.html
+++ b/oncoFinder2/templates/report/gsk_prj4.html
@@ -575,7 +575,8 @@
         <thead>
           <tr style="min-width: 900px; width: 100%;">
            <th>Perturbation</th>
-           <th>Disease	Score</th>
+           <th>Disease	</th>
+           <th>Score</th>
         
           </tr>
         </thead>  
