add scaler to report ajax pathway details

--- a/oncoFinder2/templates/report/report_ajax_pathway_detail.html
+++ b/oncoFinder2/templates/report/report_ajax_pathway_detail.html
@@ -21,6 +21,9 @@
 	<a target="_blank" href='/media/pathway.svg?path={{pathway.name}}&r={{rand}}' >	
     <img src='/media/pathway.svg?path={{pathway.name}}&r={{rand}}' style="width:100%"/>
     </a>
+    
+    <hr/>
+  <img src='/media/report-portal/path_scale.png?path={{pathway.name}}&r={{rand}}' style="width:100%"/>
 
 		
 </div>
