--- a/oncoFinder2/templates/report/gsk_prj4_t5x.html
+++ b/oncoFinder2/templates/report/gsk_prj4_t5x.html
@@ -141,6 +141,15 @@
 
   <h3>BioMAP diversity data</h3>
   
+  <br/>
+  <p>
+  Here we collected all BioMAP samples in complete diversity set and all mapped biomarkers to corresponding genes, 
+  then for each biomarker we calculated the ratio "Log Ratio"/"Significance prediction envelope at 95%" aggregated", 
+  after that for genes present across several assays we took the mean of that ratio and mapped the resulting values 
+  onto the pathway database.
+  </p>
+  <br/>
+  
   <div  style='overflow-x: auto;'>
     <table id="tbl-pathbiomap" class="path table table-striped table-bordered" cellspacing="0" width="100%">
         <thead>
